namespace HomeTrack.Domain.Enum
{
  public enum PackageType
  {
    Basic,
    Premium
  }
}