namespace HomeTrack.Domain.Enum;
public enum UserStatus
{
    Active,
    Banned,
    Pending
}